--- a/restart_petstore_postgres.yaml
+++ b/restart_petstore_postgres.yaml
@@ -1,23 +1,29 @@
 ---
-- name: Restart Petstore PostgreSQL Pod
-  hosts: localhost
-  gather_facts: true  # ここを変更
+- name: Restart PostgreSQL Pods
+  hosts: all
   tasks:
-    - name: Restart DeploymentConfig by updating spec.template.metadata.annotations
-      kubernetes.core.k8s:
-        api_version: apps/v1
-        kind: DeploymentConfig
-        name: postgresql
-        namespace: petstore
-        definition:
-          spec:
-            template:
-              metadata:
-                annotations:
-                  kubernetes.io/change-cause: "Restarted at {{ ansible_date_time.iso8601 }}"
+    - name: Set OpenShift project
+      command: oc project petstore
+      register: project_result
+      failed_when: "'error' in project_result.stderr"
+      changed_when: False
 
+    - name: Restart DeploymentConfig
+      command: oc rollout restart dc/postgresql -n petstore
       register: restart_result
+      failed_when: "'error' in restart_result.stderr"
 
-    - name: Display result
+    - name: Wait for DeploymentConfig to be available
+      command: oc wait --for=condition=available dc/postgresql --timeout=300s -n petstore
+      register: wait_result
+      failed_when: "'error' in wait_result.stderr"
+
+    - name: Get Pod status
+      command: oc get pods -l name=postgresql -n petstore
+      register: pods_result
+      failed_when: "'error' in pods_result.stderr"
+      changed_when: False
+
+    - name: Show Pods Status
       debug:
-        var: restart_result
+        msg: "{{ pods_result.stdout }}"
